# sentiment-analysis-nlp-training

./: LICENSE  README.md  pyproject.toml
sentiment_analysis/: LICENSE  Makefile  README.md  pyproject.toml
sentiment_analysis/data/inference/: sentiment_predictions.csv
sentiment_analysis/data/interim/: X_train_tfidf.joblib  test.csv  train.csv
sentiment_analysis/data/reports/: raw_sentiment_data_profile.html
sentiment_analysis/docs/: NLP Capstone Project.docx  mkdocs.yml  ~$P Capstone Project.docx
sentiment_analysis/docs/docs/: index.md
sentiment_analysis/models/: X_test_tfidf.joblib  best_sentiment_model.joblib  logreg_weighted_best.joblib  logreg_weighted_finetuned.joblib  sentiment_pipeline_weighted.joblib  tfidf_vectorizer.joblib
sentiment_analysis/notebooks/: sentiment_analysis.ipynb
