
[project]
name = "sentiment_analysis"
version = "0.0.1"
description = "Repo for creating Sentiment analysis using NLP models"
authors = [
  { name = "Omkar Dalvi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "mkdocs",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip",
    "prettytable>=3.16.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "ydata-profiling>=4.12.2",
]
requires-python = "~=3.12.0"

[tool.ruff.lint]
select = [
 # pycodestyle
 "E",
 # Pyflakes
 "F",
 # pyupgrade
 "UP",
 # flake8-bugbear
 "B",
 # flake8-simplify
 "SIM",
 # isort
 "I",
]
  
[tool.ruff]
line-length = 88
fix = true
include = ["*.py", "*.ipynb"]
output-format = "grouped"
show-fixes = true
  
  
  
[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]



