[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentiment_analysis"
version = "0.0.1"
description = "Repo for creating Sentiment analysis using NLP models"
authors = [
  { name = "Omkar Dalvi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["sentiment_analysis"]
include = ["pyproject.toml", "sentiment_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sentiment_analysis"]
force-sort-within-sections = true

